[gd_scene load_steps=31 format=2]

[ext_resource path="res://assets/images/friendlies/PlayerCharacter - 48x48.png" type="Texture" id=1]
[ext_resource path="res://scenes/entities/Player.gd" type="Script" id=2]
[ext_resource path="res://scenes/weapons/StandardWeapon.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/weapons/ShotgunWeapon.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/weapons/MGWeapon.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/images/friendlies/PlayerCharacter - hit effect - 48x48.png" type="Texture" id=6]
[ext_resource path="res://assets/images/effects/explosion - 48x48.png" type="Texture" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 16.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 336, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 384, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 432, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 480, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 528, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": false,
"name": "die",
"speed": 12.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "flying",
"speed": 6.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": false,
"name": "hit",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 25, 32 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_mask = 6
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="BulletSpawner" type="Node2D" parent="."]
position = Vector2( 0, -21 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 22 )
playing = true

[node name="ShotgunWeapon" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -17.3362 )

[node name="MGWeapon" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, -17.3362 )

[node name="StandardWeapon" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -17.3362 )
delay = 0.2

[node name="LeftFriendlyLocation" type="Node2D" parent="."]
position = Vector2( -48, 0 )

[node name="CenterFriendlyLocation" type="Node2D" parent="."]
position = Vector2( 0, -40 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 23 )

[node name="PowerupTimer" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="PowerupTimer" to="." method="_on_PowerupTimer_timeout"]
